เพิ่มชี้ buff แล้วแสดง + แก้ความยาว containner

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 
     <!-- Right Sidebar: Buff / Debuff -->
         <div id="buff-section" 
-            class="w-96 flex-shrink-0 bg-gray-900/70 p-4 rounded-2xl border border-pink-500/40 shadow-[0_0_15px_rgba(255,20,147,0.25)]
-                    max-h-[80vh] overflow-y-auto">
+            class="w-[30rem] max-w-[40%] flex-shrink-0 bg-gray-900/70 p-4 rounded-2xl border border-pink-500/40 shadow-[0_0_15px_rgba(255,20,147,0.25)]
+              max-h-[80vh] overflow-y-auto">
           <h2 class="text-xl font-bold text-pink-300 mb-3 text-center tracking-wide">✨ Buff/Debuff ✨</h2>
 
           <div class="space-y-4">
