--- a/index.html
+++ b/index.html
@@ -14,6 +14,36 @@
                    0 0 20px rgba(255, 105, 180, 0.6),
                    0 0 30px rgba(255, 105, 180, 0.4);
     }
+    /* General transitions */
+    .smooth-transition { transition: all 180ms cubic-bezier(.2,.9,.2,1); }
+    /* Slot hover */
+    .party-row [data-slot] { transition: transform 180ms ease, box-shadow 180ms ease, filter 180ms ease, opacity 180ms ease; }
+    .party-row [data-slot]:hover { transform: translateY(-4px) scale(1.03); box-shadow: 0 6px 18px rgba(0,0,0,0.5); }
+    .party-row [data-slot] img { transition: transform 220ms ease, filter 220ms ease; }
+    .party-row [data-slot]:hover img { transform: scale(1.04); }
+
+    /* Character thumbnails */
+    #char-container img { transition: transform 220ms ease, box-shadow 220ms ease, filter 220ms ease; border-radius: 6px; }
+    #char-container img:hover { transform: translateY(-6px) scale(1.08); box-shadow: 0 12px 30px rgba(255,105,180,0.12); filter: drop-shadow(0 6px 18px rgba(0,0,0,0.45)); }
+
+    /* Buff/Debuff list hover */
+    #buff-list li, #debuff-list li, #missing-buff-list li { padding: 6px 8px; border-radius: 8px; transition: background-color 160ms ease, transform 160ms ease; }
+    #buff-list li:hover { background: linear-gradient(90deg, rgba(16,185,129,0.06), rgba(16,185,129,0.02)); transform: translateX(4px); }
+    #debuff-list li:hover { background: linear-gradient(90deg, rgba(236,72,153,0.06), rgba(236,72,153,0.02)); transform: translateX(4px); }
+    #missing-buff-list li:hover { background: linear-gradient(90deg, rgba(250,204,21,0.06), rgba(250,204,21,0.02)); transform: translateX(4px); }
+
+    /* Tooltip fade */
+    #buff-entries-tooltip { opacity: 0; transform: translateY(-6px); transition: opacity 160ms ease, transform 160ms ease; }
+    #buff-entries-tooltip.visible { opacity: 1; transform: translateY(0); }
+
+    /* Slot badge small tweak */
+    .duplicate-warning { display: inline-flex; align-items: center; height: 28px; }
+
+    /* Custom scrollbar for sidebar and char container */
+    #buff-section::-webkit-scrollbar, #char-container::-webkit-scrollbar { width: 10px; height: 10px; }
+    #buff-section::-webkit-scrollbar-thumb, #char-container::-webkit-scrollbar-thumb { background: rgba(255,20,147,0.18); border-radius: 8px; }
+    #buff-section::-webkit-scrollbar-track, #char-container::-webkit-scrollbar-track { background: transparent; }
+
     /* Floating Sparkles */
     .sparkle {
       position: absolute;
