--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!-- Main Content -->
 <main class="flex-1 flex flex-col p-4 gap-4 overflow-auto">
-
+    <div id="click-area"></div>
     <div class="flex flex-1 gap-4">
 
     <!-- Left Main Area -->
