--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="w-[90px] h-[90px] bg-gray-700 border-2 flex items-center justify-center" data-slot="6"></div>
           <div class="w-[90px] h-[90px] bg-gray-700 border-2 flex items-center justify-center" data-slot="7"></div>
       
-       <!-- Icons Container -->
+        <!-- Icons Container -->
         <div class="ml-auto flex gap-2">
           <!-- Brush Icon -->
           <div class="w-[90px] h-[90px] bg-gray-800 flex items-center justify-center 
@@ -217,8 +217,10 @@
 
     <!-- Right Sidebar: Buff / Debuff -->
         <div id="buff-section" 
-            class="w-[30rem] max-w-[40%] flex-shrink-0 bg-gray-900/70 p-4 rounded-2xl border border-pink-500/40 shadow-[0_0_15px_rgba(255,20,147,0.25)]
-              max-h-[80vh] overflow-y-auto">
+            class="w-[30rem] h-[80vh] flex-shrink-0 bg-gray-900/70 p-4 rounded-2xl 
+                  border border-pink-500/40 shadow-[0_0_15px_rgba(255,20,147,0.25)]
+                  overflow-y-auto">
+
           <h2 class="text-xl font-bold text-pink-300 mb-3 text-center tracking-wide">✨ Buff/Debuff ✨</h2>
 
           <div class="space-y-4">
