แก้แนะนำตัวละครใหม่+update Nyx

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       <div id="char-filter-buttons" class="flex justify-end gap-2 mb-1">
         <button data-role="all" class="filter-btn bg-pink-600 text-white px-2 py-1 rounded">ALL</button>
         <button data-role="physical" class="filter-btn bg-gray-700 text-white px-2 py-1 rounded">PHY</button>
-        <button data-role="magic" class="filter-btn bg-gray-700 text-white px-2 py-1 rounded">MAG</button>
+        <button data-role="magical" class="filter-btn bg-gray-700 text-white px-2 py-1 rounded">MAG</button>
         <button data-role="support" class="filter-btn bg-gray-700 text-white px-2 py-1 rounded">SUP</button>
       </div>
 
