--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             hover:bg-pink-400
             shadow-lg shadow-pink-500/40
             transition">
-      ?
+      <img src="assets/setting.png" class="w-5 h-5" alt="Setting">
     </button>
 
     <!-- Help Hint Bubble -->
@@ -40,7 +40,7 @@
             opacity-0
             pointer-events-none">
       <span id="help-hint-text" class="whitespace-nowrap opacity-0">
-        Help!
+        Setting
       </span>
 
       <!-- Sparkle -->
@@ -61,7 +61,7 @@
 
         <!-- Header -->
         <div class="flex items-center justify-between mb-4">
-          <h2 class="text-lg font-bold text-pink-300 justify-center">❓ Help</h2>
+          <h2 class="text-lg font-bold text-pink-300 justify-center">Setting</h2>
           <button id="help-close"
             class="text-gray-400 hover:text-white text-xl leading-none">✕</button>
         </div>
@@ -118,8 +118,6 @@
                   <span class="text-left">ดูรายละเอียดบัพ / ดีบัฟ</span>
                 </li>
             </ul>
-
-
           </div>
         </div>
       </div>
