FP มีมอดให้เลือกบัพอย่างเดียว

--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
                 </li>
             </ul>
           </div>
+
+          <div class="border-b border-pink-500/30 my-1"></div>
+          <h3 class="text-pink-400 font-semibold">Buff</h3>
+            <div class="flex items-center gap-3">
+              <img src="pics/Chung/Icon_-_Fatal_Phantom.png" class="w-10 h-10"alt="Chung">
+              <img src="assets/Sharpshooter-Syndrome.png" class="w-10 h-10"alt="Sharpshooter Syndrome">
+              <div class="flex border border-gray-600 rounded-md overflow-hidden text-xs">
+                <button class="buffgroup-toggle px-2 py-1 bg-green-600 text-white" data-group-id="sharpshooter_syndrome" data-value="Action Speed เพิ่มขึ้น 18%">
+                  Action Speed 18%
+                </button>
+                <button class="buffgroup-toggle px-2 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600" data-group-id="sharpshooter_syndrome" data-value="Critical 10%">
+                  Critical 10%
+                </button>
+              </div>
+            </div>
         </div>
       </div>
     </div>
