แก้คลิกที่สกิล FP

--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
           <h3 class="text-pink-400 font-semibold">Buff</h3>
             <div class="flex items-center gap-3">
               <img src="pics/Chung/Icon_-_Fatal_Phantom.png" class="w-10 h-10"alt="Chung">
-              <img src="assets/Sharpshooter-Syndrome.png" class="w-10 h-10"alt="Sharpshooter Syndrome">
+              <a href="https://elwiki.net/w/Sharpshooter_Syndrome" target="_blank" rel="noopener noreferrer">
+                <img src="assets/Sharpshooter-Syndrome.png" class="w-10 h-10 hover:scale-110 transition duration-200" alt="Sharpshooter Syndrome">
+              </a>
+
               <div class="flex border border-gray-600 rounded-md overflow-hidden text-xs">
                 <button class="buffgroup-toggle px-2 py-1 bg-green-600 text-white" data-group-id="sharpshooter_syndrome" data-value="Action Speed เพิ่มขึ้น 18%">
                   Action Speed 18%
